deployments/k8s/resources/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pgadmin.local
    secretName: pgadmin-tls
  rules:
    - host: pgadmin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
